--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -1,17 +1,18 @@
-<!--
+
       <video
-        src="../../../assets/whats.mp4"
+        src="../../../assets/SinAudio.mp4"
         autoplay
         loop
         muted
-       
+       class="w-100"
       ></video>
-   -->
-<img
+ 
+   <!--<img
   id="fondoHero"
   class="w-100"
   src="../../../assets/WhatsApp Image 2023-01-24 at 18.32.54.jpeg"
-/>
+/>-->
+
 <h1 id="textHero" class="text-center w-50">
   ¿Listo para darle una reforma a tu hogar? <br />
   <button id="btnInicio" class="btn" [@fadeInOut]="fadeInOut">
